# Cookbook

./: .env.example  .env.local.example  .gitignore  Dockerfile  docker-compose.yml  pyproject.toml
backend/: .env.example  Dockerfile  alembic.ini
backend/migrations/: env.py
backend/migrations/versions/: c1cf47e53193_initial_migration.py
backend/src/core/: config.py  main.py  security.py  server.py
backend/src/models/: connection.py
backend/src/repositories/: BaseRepository.py  cooking_method.py  cuisine.py  dish_type.py  ingredient.py  recipe.py  recipe_category.py  recipe_ingredient.py  recipe_step.py  request.py  user.py
backend/src/services/: BaseService.py  cooking_method.py  cuisine.py  dish_type.py  ingredient.py  recipe.py  request.py  user.py
src/: alembic_config.env  backend_config.env
src/front/endpoints/: recipe_search.py  test.py  test2.py
src/front/static/: styles.css
src/logic/: __init__.py  config.py  main.py  server.py
src/logic/authorization/: auth.py
src/logic/endpoints/: __init__.py  auth.py  comment.py  cooking_method.py  cuisine.py  dish_type.py  ingredient.py  rating.py  recipe.py  request.py  user.py
src/logic/models/: connection.py  s3.py
src/logic/repositories/: comment.py  cooking_method.py  cuisine.py  dish_type.py  ingredient.py  rating.py  recipe.py  recipe_category.py  recipe_ingredient.py  recipe_step.py  request.py  subscription.py  user.py
src/logic/services/: comment.py  cooking_method.py  cuisine.py  dish_type.py  ingredient.py  rating.py  recipe.py  request.py  user.py
src/migrations/: env.py
(+43 files in other folders)
